--- a/Demo/basicDemo/17_18/convert.html
+++ b/Demo/basicDemo/17_18/convert.html
@@ -9,10 +9,27 @@
 <button id="trans-btn">转化为二进制</button>
 <p id="result">运算结果</p>
 <script>
-
-    function dec2bin(decNumber) {
+    let nDec=document.getElementById("dec-number");
+    let oBtn=document.getElementById("trans-btn");
+    let result=document.getElementById("result");
+    function dec2bin(decNumber){
         // 在这里实现你的转化方法，注意需要判断输入必须为一个非负整数
+        // console.log(nDec.value);
+        let bin=[];
+        if(decNumber > 0){
+            do {
+                bin.push(decNumber%2);
+                decNumber=(decNumber-decNumber%2) / 2;
+            }while (decNumber >= 2);
+            bin.push(decNumber);
+            result.innerHTML=bin.reverse().join("");
+        }else{
+            console.log("请输入非负整数");
+        }
     }
+
+    oBtn.onclick=function(){dec2bin(parseInt(nDec.value))};
+
 
     // 实现党点击转化按钮时，将输入的十进制数字转化为二进制，并显示在result的p标签内
     // Some coding
