--- a/Demo/basicDemo/17_18/dec2bin.html
+++ b/Demo/basicDemo/17_18/dec2bin.html
@@ -6,34 +6,44 @@
 </head>
 <body>
 <input id="dec-number" type="number" placeholder="输入一个十进制非负整数">
+<input id="bin-bit" type="number" placeholder="输入转化后二进制数字位数">
 <button id="trans-btn">转化为二进制</button>
 <p id="result">运算结果</p>
 <script>
     let nDec=document.getElementById("dec-number");
     let oBtn=document.getElementById("trans-btn");
     let result=document.getElementById("result");
+    let nBit=document.getElementById("bin-bit");
     function dec2bin(decNumber){
         // 在这里实现你的转化方法，注意需要判断输入必须为一个非负整数
-        // console.log(nDec.value);
         let bin=[];
-        if(decNumber > 0){
-            do {
+        if(decNumber >= 0){
+            while (decNumber >= 2) {
                 bin.push(decNumber%2);
                 decNumber=(decNumber-decNumber%2) / 2;
-            }while (decNumber >= 2);
+            }
             bin.push(decNumber);
-            result.innerHTML=bin.reverse().join("");
+            bin=bin.reverse();
+            if(parseInt(nBit.value) <= bin.length){
+                console.log("您输入的位数过小！");
+                return bin.join("");
+            }else {
+                for (let i=0;i<= parseInt(nBit.value)- bin.length;i++){
+                    bin.unshift(0);
+                }
+                return bin.join("");
+            }
         }else{
             console.log("请输入非负整数");
         }
     }
-
-    oBtn.onclick=function(){dec2bin(parseInt(nDec.value))};
-
-
     // 实现党点击转化按钮时，将输入的十进制数字转化为二进制，并显示在result的p标签内
     // Some coding
 
+
+    oBtn.onclick=function(){
+        result.innerHTML = dec2bin(parseInt(nDec.value))
+    };
 </script>
 </body>
 </html>
