--- a/Demo/basicDemo/19.html
+++ b/Demo/basicDemo/19.html
@@ -37,24 +37,39 @@
 
     function getAllListItem() {
         // 返回页面中所有li标签
-        return document.getElementsByTagName('li');
+        //1
+        // return document.getElementsByTagName('li');
+        //2
+        return document.querySelectorAll('li');
     }
 
     function findAllHtmlSpanInOneSection(sectionId) {
         // 返回某个section下所有span中内容为HTML的span标签
-        let aSpan= document.getElementById(sectionId).getElementsByTagName("span");
+        //1
+        // let aSpan= document.getElementById(sectionId).getElementsByTagName("span");
         let result=[];
-        for(let i=0;i< aSpan.length;i++){
-            if(aSpan[i].innerHTML = "HTML") {
+        // for(let i=0;i< aSpan.length;i++){
+        //     if(aSpan[i].innerHTML = "HTML") {
+        //         result.push(aSpan[i]);
+        //     }
+        // }
+        // return  result;
+        //2
+        let aSpan= document.querySelectorAll("#"+sectionId+" span");
+        for (i in aSpan){
+            if(aSpan[i].innerText==="HTML"){
                 result.push(aSpan[i]);
             }
-        } 
-        return  result;
+        }
+        return result;
     }
 
     function findListItem(sectionId, spanCont) {
         // 返回某个section下，所有所包含span内容为spanCont的LI标签
-        let aSpan=document.getElementById(sectionId).getElementsByTagName('span');
+        //1
+        // let aSpan=document.getElementById(sectionId).getElementsByTagName('span');
+        //2
+        let aSpan=document.querySelectorAll("#"+sectionId+" span");
         let result=[];
         for(let i=0;i<aSpan.length;i++){
             if(aSpan[i].innerHTML=spanCont){
@@ -62,22 +77,26 @@
             }
         }
         return result;
+
     }
 
     function getActiveLinkContent(sectionId) {
         // 返回某个section下，class为active的链接中包含的文字内容
-        let aLink= document.getElementById(sectionId).getElementsByClassName('active');
+        //1
+        // let aLink= document.getElementById(sectionId).getElementsByClassName('active');
+        //2
+        let aLink= document.querySelectorAll("#"+sectionId+" .active");
         let result=[];
         for (let i=0;i<aLink.length;i++){
             result.push(aLink[i].innerHTML);
         }
         return result;
     }
-
     console.log(getAllListItem());
     console.log(findAllHtmlSpanInOneSection("news-top"));
     console.log(findListItem("news-normal", "JS"));
     console.log(getActiveLinkContent("news-top"));
+
 </script>
 </body>
 </html>
