--- a/Demo/basicDemo/20_21/event.html
+++ b/Demo/basicDemo/20_21/event.html
@@ -65,13 +65,19 @@
             //     }
             // }
             //3重构
-            let oUl=document.querySelector(".palette"),
+            let oPalette=document.querySelector(".palette"),
                 p=document.querySelector(".color-picker");
-            oUl.onclick=function (event) {
+            oPalette.onclick=function (event) {
                 let e=event||window.event;
                 let target=event.target||event.srcElement;
                 p.innerHTML=target.style.backgroundColor;
                 p.style.color=target.style.backgroundColor;
+            };
+            //4
+            let oFade=document.getElementById("fade-obj");
+            let oBtnFade=document.getElementById("fade-btn");
+            function fade() {
+                
             }
         }
     </script>
@@ -124,3 +130,14 @@
 <p>点击某一个 Li 标签时，将 Li 的背景色显示在 P 标签内，并将 P 标签中的文字颜色设置成 Li 的背景色</p>
 </body>
 </html>
+<hr>
+<div id="fade-obj" style="width:300px;height:300px;background:#000"></div>
+<button id="fade-btn">淡出</button>
+<ul>
+    <li>点击按钮时，开始改变 fade-obj 的透明度，开始一个淡出（逐渐消失）动画，直到透明度为0</li>
+    <li>在动画过程中，按钮的状态变为不可点击</li>
+    <li>在动画结束后，按钮状态恢复，且文字变成“淡入”</li>
+    <li>在 按钮显示 淡入 的状态时，点击按钮，开始一个“淡入”（逐渐出现）的动画，和上面类似按钮不可点，直到透明度完全不透明</li>
+    <li>淡入动画结束后，按钮文字变为“淡出”</li>
+    <li>暂时不要使用 CSS animation （以后我们再学习）</li>
+</ul>
