--- a/Demo/basicDemo/22_24/Number.html
+++ b/Demo/basicDemo/22_24/Number.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Number</title>
+    <style>
+        div{
+            display: flex;
+            flex-wrap: wrap;
+        }
+        button{
+            width: 200px;
+            height: 60px;
+        }
+    </style>
     <script>
         window.onload=function () {
             let aBtn=document.getElementsByTagName('div')[1].getElementsByTagName('button');
@@ -10,6 +20,12 @@
             let numB=document.getElementById('num-b');
             let p=document.getElementById('result');
             let aRadio=document.querySelectorAll('input[type="radio"][name="math-obj"]');
+            numA.onclick=function(){
+                aRadio[0].checked=true;
+            };
+            numB.onclick=function(){
+                aRadio[1].checked=true;
+            };
             aBtn[0].onclick=function () {
                 for (let i=0;i<aRadio.length;i++){
                     if (aRadio[i].checked === true){
@@ -18,7 +34,7 @@
                         }else{
                             p.innerText="请输入数字！";
                         }
-                    } 
+                    }
                 } 
             };
             aBtn[1].onclick=function () {
@@ -109,5 +125,33 @@
     <button>返回 A 和 B 中的最低值</button>
 </div>
 <p id="result"></p>
+<hr>
+<div>
+    <label>String A:
+        <input id="radio-a1" type="radio" checked="true" name="str-obj" value="a">
+    </label>
+    <textarea id="str-a"></textarea>
+    <label>String B:
+        <input id="radio-b1" type="radio" name="str-obj" value="b">
+    </label>
+    <textarea id="str-b"></textarea>
+    <label>Num A：<input id="num-a1" type="number" value="0"></label>
+    <label>Num B：<input id="num-b1" type="number" value="1"></label>
+</div>
+<div>
+    <button>获取当前选中输入的内容长度</button>
+    <button>当前选中输入中的第3个字符</button>
+    <button>把两个输入框的文字连接在一起输出（concat）</button>
+    <button>输入B中的内容，在输入A的内容中第一次出现的位置（indexOf）</button>
+    <button>输入A中的内容，在输入B的内容中最后一次出现的位置（lastIndexOf）</button>
+    <button>使用slice获取选中输入框内容的部分内容，参数为num-a及num-b</button>
+    <button>当前选中输入框的行数</button>
+    <button>使用substr获取选中输入框内容的子字符串，参数为num-a及num-b</button>
+    <button>把所选输入框中的内容全部转为大写</button>
+    <button>把所选输入框中的内容全部转为小写</button>
+    <button>把所选输入框中内容的半角空格全部去除</button>
+    <button>把所选输入框中内容的a全部替换成另外一个输入框中的内容</button>
+</div>
+<p id="result1"></p>
 </body>
 </html>
