--- a/Demo/basicDemo/22_24/22_24.html
+++ b/Demo/basicDemo/22_24/22_24.html
@@ -34,7 +34,7 @@
 <hr>
 <div>
     <label>String A:
-        <input id="radio-a-str" type="radio" checked="true" name="str-obj" value="a">
+        <input id="radio-a-str" type="radio" name="str-obj" value="a">
     </label>
     <textarea id="str-a"></textarea>
     <label>String B:
