--- a/Demo/basicDemo/22_24/22_24.html
+++ b/Demo/basicDemo/22_24/22_24.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8">
     <title>Number</title>
     <style>
-        div{
-            display: flex;
-            flex-wrap: wrap;
-        }
         button{
-            width: 200px;
-            height: 60px;
+            display: block;
         }
     </style>
     <script type="text/javascript" src="22_24.js"></script>
@@ -59,5 +54,18 @@
     <button>把所选输入框中内容的a全部替换成另外一个输入框中的内容</button>
 </div>
 <p id="result-str"></p>
+<hr>
+<input id="queue-input" type="text">
+<p id="queue-cont">队列内容：apple-&gt;pear</p>
+<button id="in-btn">入队</button>
+<button id="out-btn">出队</button>
+<button id="font-btn">打印队头元素内容</button>
+<button id="empty-btn">判断队列是否为空</button>
+<ul>
+    <li>实现如阅读材料中，队列的相关入队、出队、获取队头、判空的操作</li>
+    <li>队头对应数组中最后一个元素</li>
+    <li>入队和出队操作后，需要在 id 为 queue-cont 的 p 标签中更新显示队列中的内容，
+        队头在最右侧，中间用 -> 连接（练习使用数组的join方法）</li>
+</ul>
 </body>
 </html>
