--- a/Demo/basicDemo/22_24/22_24.html
+++ b/Demo/basicDemo/22_24/22_24.html
@@ -7,65 +7,78 @@
         button{
             display: block;
         }
+        .section{
+            border: 1px solid palegoldenrod;
+            margin: 10px;
+        }
     </style>
     <script type="text/javascript" src="22_24.js"></script>
 </head>
 <body>
-<div>
-    <label>Number A:<input id="radio-a" type="radio" name="math-obj" value="a"></label><input id="num-a" type="text" placeholder="请输入数字">
-    <label>Number B:<input id="radio-b" type="radio" name="math-obj" value="b"></label><input id="num-b" type="text" placeholder="请输入数字">
+<div class="section 1">
+    <div>
+        <label>Number A:<input id="radio-a" type="radio" name="math-obj" value="a"></label><input id="num-a" type="text"
+                                                                                                  placeholder="请输入数字">
+        <label>Number B:<input id="radio-b" type="radio" name="math-obj" value="b"></label><input id="num-b" type="text"
+                                                                                                  placeholder="请输入数字">
+    </div>
+    <div>
+        <button>判断当前选中的输入框输入内容是否为数字</button>
+        <button>把 A 四舍五入为 B 个小数位数的数字</button>
+        <button>当前选中数字的绝对值</button>
+        <button>对当前选中的数字进行上舍入</button>
+        <button>对当前选中的数字进行下舍入</button>
+        <button>把当前选中的数字四舍五入为最接近的整数</button>
+        <button>返回 A 和 B 中的最高值</button>
+        <button>返回 A 和 B 中的最低值</button>
+    </div>
+    <p id="result"></p></div>
+
+<div class="section 2">
+    <div>
+        <label>String A:
+            <input id="radio-a-str" type="radio" name="str-obj" value="a">
+        </label>
+        <textarea id="str-a"></textarea>
+        <label>String B:
+            <input id="radio-b-str" type="radio" name="str-obj" value="b">
+        </label>
+        <textarea id="str-b"></textarea>
+        <label>Num A：<input id="num-a-str" type="number" value="0"></label>
+        <label>Num B：<input id="num-b-str" type="number" value="1"></label>
+    </div>
+    <div>
+        <button>获取当前选中输入的内容长度</button>
+        <button>当前选中输入中的第3个字符</button>
+        <button>把两个输入框的文字连接在一起输出（concat）</button>
+        <button>输入B中的内容，在输入A的内容中第一次出现的位置（indexOf）</button>
+        <button>输入A中的内容，在输入B的内容中最后一次出现的位置（lastIndexOf）</button>
+        <button>使用slice获取选中输入框内容的部分内容，参数为num-a及num-b</button>
+        <button>当前选中输入框的行数</button>
+        <button>使用substr获取选中输入框内容的子字符串，参数为num-a及num-b</button>
+        <button>把所选输入框中的内容全部转为大写</button>
+        <button>把所选输入框中的内容全部转为小写</button>
+        <button>把所选输入框中内容的半角空格全部去除</button>
+        <button>把所选输入框中内容的a全部替换成另外一个输入框中的内容</button>
+    </div>
+    <p id="result-str"></p></div>
+
+<div class="section 3">进入控制台查看测试用例相关log</div>
+
+<div class="section 4">进入控制台查看Object相关log</div>
+<div class="section 5"><input id="queue-input" type="text">
+    <p id="queue-cont">队列内容：apple-&gt;pear</p>
+    <button id="in-btn">入队</button>
+    <button id="out-btn">出队</button>
+    <button id="font-btn">打印队头元素内容</button>
+    <button id="empty-btn">判断队列是否为空</button>
+    <ul>
+        <li>实现如阅读材料中，队列的相关入队、出队、获取队头、判空的操作</li>
+        <li>队头对应数组中最后一个元素</li>
+        <li>入队和出队操作后，需要在 id 为 queue-cont 的 p 标签中更新显示队列中的内容，
+            队头在最右侧，中间用 -> 连接（练习使用数组的join方法）
+        </li>
+    </ul>
 </div>
-<div>
-    <button>判断当前选中的输入框输入内容是否为数字</button>
-    <button>把 A 四舍五入为 B 个小数位数的数字</button>
-    <button>当前选中数字的绝对值</button>
-    <button>对当前选中的数字进行上舍入</button>
-    <button>对当前选中的数字进行下舍入</button>
-    <button>把当前选中的数字四舍五入为最接近的整数</button>
-    <button>返回 A 和 B 中的最高值</button>
-    <button>返回 A 和 B 中的最低值</button>
-</div>
-<p id="result"></p>
-<hr>
-<div>
-    <label>String A:
-        <input id="radio-a-str" type="radio" name="str-obj" value="a">
-    </label>
-    <textarea id="str-a"></textarea>
-    <label>String B:
-        <input id="radio-b-str" type="radio" name="str-obj" value="b">
-    </label>
-    <textarea id="str-b"></textarea>
-    <label>Num A：<input id="num-a-str" type="number" value="0"></label>
-    <label>Num B：<input id="num-b-str" type="number" value="1"></label>
-</div>
-<div>
-    <button>获取当前选中输入的内容长度</button>
-    <button>当前选中输入中的第3个字符</button>
-    <button>把两个输入框的文字连接在一起输出（concat）</button>
-    <button>输入B中的内容，在输入A的内容中第一次出现的位置（indexOf）</button>
-    <button>输入A中的内容，在输入B的内容中最后一次出现的位置（lastIndexOf）</button>
-    <button>使用slice获取选中输入框内容的部分内容，参数为num-a及num-b</button>
-    <button>当前选中输入框的行数</button>
-    <button>使用substr获取选中输入框内容的子字符串，参数为num-a及num-b</button>
-    <button>把所选输入框中的内容全部转为大写</button>
-    <button>把所选输入框中的内容全部转为小写</button>
-    <button>把所选输入框中内容的半角空格全部去除</button>
-    <button>把所选输入框中内容的a全部替换成另外一个输入框中的内容</button>
-</div>
-<p id="result-str"></p>
-<hr>
-<input id="queue-input" type="text">
-<p id="queue-cont">队列内容：apple-&gt;pear</p>
-<button id="in-btn">入队</button>
-<button id="out-btn">出队</button>
-<button id="font-btn">打印队头元素内容</button>
-<button id="empty-btn">判断队列是否为空</button>
-<ul>
-    <li>实现如阅读材料中，队列的相关入队、出队、获取队头、判空的操作</li>
-    <li>队头对应数组中最后一个元素</li>
-    <li>入队和出队操作后，需要在 id 为 queue-cont 的 p 标签中更新显示队列中的内容，
-        队头在最右侧，中间用 -> 连接（练习使用数组的join方法）</li>
-</ul>
 </body>
 </html>
