--- a/Demo/basicDemo/22_24/22_24.html
+++ b/Demo/basicDemo/22_24/22_24.html
@@ -7,7 +7,7 @@
         button{
             display: block;
         }
-        .section{
+        div{
             border: 1px solid palegoldenrod;
             margin: 10px;
         }
@@ -34,7 +34,7 @@
     </div>
     <p id="result"></p></div>
 
-<div class="section 2">
+<div class="section2">
     <div>
         <label>String A:
             <input id="radio-a-str" type="radio" name="str-obj" value="a">
@@ -63,11 +63,11 @@
     </div>
     <p id="result-str"></p></div>
 
-<div class="section 3">进入控制台查看测试用例相关log</div>
+<div class="section3">进入控制台查看测试用例相关log</div>
 
-<div class="section 4">进入控制台查看Object相关log</div>
-<div class="section 5"><input id="queue-input" type="text">
-    <p id="queue-cont">队列内容：apple-&gt;pear</p>
+<div class="section4">进入控制台查看Object相关log</div>
+<div class="section5"><input id="queue-input" type="text">
+    <p id="queue-cont">队列内容：apple->pear</p>
     <button id="in-btn">入队</button>
     <button id="out-btn">出队</button>
     <button id="font-btn">打印队头元素内容</button>
@@ -79,6 +79,24 @@
             队头在最右侧，中间用 -> 连接（练习使用数组的join方法）
         </li>
     </ul>
+</div>
+<div class="section6">
+    <p>栈顶在右侧</p>
+    <input id="stack-input" type="text">
+    <p id="stack-cont">栈内容：apple->pear</p>
+    <button id="push-btn">进栈</button>
+    <button id="pop-btn">退栈</button>
+    <button id="font-btn-stack">打印栈顶元素内容</button>
+    <button id="empty-btn-stack">判断栈是否为空</button>
+</div>
+<div class="section7">
+    <p>栈顶在左侧</p>
+    <input id="stack-input2" type="text">
+    <p id="stack-cont2">栈内容：apple->pear</p>
+    <button id="push-btn2">进栈</button>
+    <button id="pop-btn2">退栈</button>
+    <button id="font-btn-stack2">打印栈顶元素内容</button>
+    <button id="empty-btn-stack2">判断栈是否为空</button>
 </div>
 </body>
 </html>
