对象转数组

--- a/Demo/basicDemo/22_24/22_24.html
+++ b/Demo/basicDemo/22_24/22_24.html
@@ -98,5 +98,8 @@
     <button id="font-btn-stack2">打印栈顶元素内容</button>
     <button id="empty-btn-stack2">判断栈是否为空</button>
 </div>
+<div class="section8">
+    <p>进入控制台查看arr1234排序</p>
+</div>
 </body>
 </html>
