--- a/Demo/basicDemo/22_24/22_24.html
+++ b/Demo/basicDemo/22_24/22_24.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Number</title>
+    <title>24_24</title>
     <style>
         button{
             display: block;
