--- a/Demo/basicDemo/25_27/25_27.html
+++ b/Demo/basicDemo/25_27/25_27.html
@@ -152,6 +152,15 @@
         <li>封装一个函数，把月、日、小时等出现个位数的情况前面补充0，补充为两位，比如1变为01</li>
         <li>封装一个函数，把最后的日期时间，按照要求的格式进行包装</li>
         <li>可能不止上面这些，尽可能地进行功能的解耦和拆解</li>
+        <li>封装一个函数，来根据某个日期返回这一天是星期几</li>
+        <li>封装一个函数，把月、日、小时等出现个位数的情况前面补充0，补充为两位，比如1变为01</li>
+        <li>封装一个函数，把最后的日期时间，按照要求的格式进行包装</li>
+        <li>可能不止上面这些，尽可能地进行功能的解耦和拆解</li>
+        <li>封装一个函数，来根据某个日期返回这一天是星期几</li>
+        <li>封装一个函数，把月、日、小时等出现个位数的情况前面补充0，补充为两位，比如1变为01</li>
+        <li>封装一个函数，把最后的日期时间，按照要求的格式进行包装</li>
+        <li>可能不止上面这些，尽可能地进行功能的解耦和拆解</li>
+        
     </ul>
     <p id="result">结果1：</p>
     <p id="result2">结果2：</p>
