--- a/Demo/basicDemo/22_24/22_24.html
+++ b/Demo/basicDemo/22_24/22_24.html
@@ -12,15 +12,15 @@
             margin: 10px;
         }
     </style>
-    <script type="text/javascript" src="22_24.js"></script>
+    <script src="22_24.js"></script>
 </head>
 <body>
 <div class="section 1">
     <div>
-        <label>Number A:<input id="radio-a" type="radio" name="math-obj" value="a"></label><input id="num-a" type="text"
-                                                                                                  placeholder="请输入数字">
-        <label>Number B:<input id="radio-b" type="radio" name="math-obj" value="b"></label><input id="num-b" type="text"
-                                                                                                  placeholder="请输入数字">
+        <label>Number A:<input id="radio-a" type="radio" name="math-obj" value="a"></label>
+        <input id="num-a" type="text" placeholder="请输入数字">
+        <label>Number B:<input id="radio-b" type="radio" name="math-obj" value="b"></label>
+        <input id="num-b" type="text" placeholder="请输入数字">
     </div>
     <div>
         <button>判断当前选中的输入框输入内容是否为数字</button>
