--- a/Demo/basicDemo/31_41/31_41.html
+++ b/Demo/basicDemo/31_41/31_41.html
@@ -14,11 +14,13 @@
 </div>
 <div id="product-radio-wrapper">
 </div>
+<div id="chart"></div>
 <div id="table-wrapper">
 </div>
 <script src="js/data.js"></script>
 <script src="js/table.js"></script>
 <script src="js/checkbox.js"></script>
+<script src="js/bar.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
