--- a/Demo/basicDemo/31_41/js/canvas/矩形.html
+++ b/Demo/basicDemo/31_41/js/canvas/矩形.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>矩形canvas</title>
+    <title>矩形</title>
 </head>
 <body>
 <canvas id="rect"></canvas>
